# pomagma

./: .clang-format  .cursorrules  .gitignore  .travis.yml  Brewfile  CMakeLists.txt  DEVELOPMENT.md  LICENSE  Makefile  README.md  TODO.md  VCPKG_SETUP.md  clean.sh  clone.sh  configure-analyst.sh  conftest.py  diff.py  env.sh  explore.sh  install-neo4j.sh  install-phantomjs.sh  install.sh  nbval_sanitize.txt  package.json  preinstall.sh  pyproject.toml  requirements.sh  requirements.txt  setup-vcpkg.sh  setup.cfg  setup.py  test.sh  travis_test.sh  vcpkg-configuration.json  vcpkg-env.sh  vcpkg.json  vet.py  vetted_hashes.csv
pomagma/: CMakeLists.txt  Makefile  compiler  compiler.py  compiler_test.py  cpp.py  cpp_test.py  expressions.py  join.rules  make.py  parser.py  parser_test.py  quote.rules  rand.rules  run.py  sequents.py  sequents_test.py  signature.py  signature_test.py  sk.rules  test_compiler.py  test_cpp.py  test_parser.py  types.rules  util.py  workers_test.py
pomagma/analyst/: CMakeLists.txt  approximate.cpp  cached_approximator.cpp  cached_approximator.hpp  client.py  client_test.py  compiler.py  compiler_test.py  corpus.cpp  corpus.hpp  intervals.hpp  main.cpp  propagate.cpp  propagate.hpp  server.py  validator.hpp
pomagma/atlas/: CMakeLists.txt  atlas_test.py  parser.hpp  program.hpp  protobuf.hpp  sampler.hpp  signature.hpp  structure_impl.hpp
pomagma/cartographer/: CMakeLists.txt  __init__.py  cartographer_messages.proto  infer.cpp  main.cpp  server.cpp  server.py  server_test.py  signature.cpp  trim.cpp  trim.hpp
pomagma/compiler/: __main__.py  compiler_test.py  completion.py  expressions.py  expressions_test.py  frontend.py  frontend_test.py  parser_test.py  plans.py  presentation.py  sequents_test.py  signature.py  signature_test.py  simplify.py
pomagma/corpus/: __main__.py  corpus.py
pomagma/examples/: definable_graphs.ipynb  definable_systems.ipynb  definable_types_test.py  infinite_eta_graphs.ipynb  solve.py  solve_test.py  sudoku.py  sudoku_test.py  testing.py
pomagma/io/: CMakeLists.txt  blobstore.hpp  blobstore.py  message_profile.cpp  message_test.cpp  protoblob.hpp  protobuf.py  protobuf_test.cpp  protobuf_test.py  s3.py
pomagma/language/: CMakeLists.txt  Makefile  language.hpp  language.proto  skj.json  skja.json  util.py
pomagma/linguist/: __init__.py
pomagma/reducer/: README.md  __main__.py  bohm.py  bohm_debug.py  bohm_debug_test.py  curry_test.py  graph2.py  graph2_test.py  graphs.py  graphs_test.py  huet98.py  linker_test.py  main_test.py  pattern.py  pattern_test.py  programs.py  sugar_test.py  syntax_test.py  universe.py  util_test.py
pomagma/solver/: CMakeLists.txt  solver.cpp  solver.hpp  theory_solver.hpp
pomagma/surveyor/: CMakeLists.txt  insert_parser.hpp
pomagma/theorist/: CMakeLists.txt  assume.hpp  conjecture_diverge.hpp  consistency.cpp  diverge_test.py  find_parser.hpp  hypothesize.cpp  report.py
pomagma/theory/: a.theory  group.theory  join.theory  order.theory  reflect.theory  rs.theory
pomagma/torch/: CMakeLists.txt  compression_test.py  conftest.py  corpus_test.py  extension.cpp  extraction.py  language_test.py  structure.hpp  syntax.py
pomagma/util/: CMakeLists.txt  async_map.hpp  dense_set_store_test.cpp  gtest_main.cpp  hash_map.hpp  hashcons.py  hasher.cpp  hasher_test.cpp  lazy_map_test.cpp  metrics.py  profiler.cpp  queue.hpp  queue_profile.cpp  threading.hpp  unique_set.hpp  util.cpp  util.hpp  util_test.py  worker_pool.hpp
src/: CMakeLists.txt  Makefile  README.md  __main__.py  actions.py  aligned_alloc.cpp  aligned_alloc.hpp  atlas.py  base_bin_rel.cpp  base_bin_rel.hpp  batch.py  batch_test.py  binary_function.cpp  binary_function.hpp  binary_function_test.cpp  binary_relation.cpp  binary_relation.hpp  binary_relation_test.cpp  blobstore.py  bool_ref.hpp  carrier.cpp  carrier.hpp  carrier_test.cpp  concurrent.hpp  corpus.dump  corpus.py  corpus_test.py  cpp.depend  dense_bin_fun.cpp  dense_bin_fun.hpp  dense_bin_fun_test.cpp  dense_bin_rel.cpp  dense_bin_rel.hpp  dense_bin_rel_test.cpp  dense_set.cpp  dense_set.hpp  dense_set_profile.cpp  dense_set_test.cpp  dense_sym_fun.cpp  dense_sym_fun.hpp  (+44 more)
src/aggregator/: CMakeLists.txt  aggregator.hpp  binary_function.cpp  binary_function.hpp  binary_relation.cpp  binary_relation.hpp  binary_relation_test.cpp  carrier.cpp  carrier.hpp  carrier_test.cpp  function_test.hpp  injective_function.cpp  injective_function.hpp  injective_function_test.cpp  nullary_function.cpp  nullary_function.hpp  nullary_function_test.cpp  structure.cpp  structure.hpp  symmetric_function.cpp  symmetric_function.hpp  util.hpp
src/analyst/: CMakeLists.txt  __init__.py  analyst_messages.proto  approximate.cpp  approximate.hpp  approximate_parser.hpp  approximator.cpp  approximator.hpp  cached_approximator.cpp  cached_approximator.hpp  client.js  client.py  client_test.py  compiler.py  compiler_test.py  corpus.cpp  corpus.hpp  index.js  intervals.cpp  intervals.hpp  logic.py  main.cpp  messages.proto  propagate.cpp  propagate.hpp  propagator.cpp  propagator.hpp  serve_main.cpp  server.cpp  server.hpp  server.py  server_main.cpp  server_test.py  simplify.cpp  simplify.hpp  simplify_main.cpp  startup.py  synthesize.py  synthesize_test.py  test.js  (+3 more)
src/atlas/: CMakeLists.txt  Makefile  __init__.py  __main__.py  aggregate.cpp  aggregate.hpp  aggregate_main.cpp  aggregator.cpp  aggregator.hpp  atlas_test.py  base_bin_rel.cpp  base_bin_rel.hpp  binary_function.cpp  binary_relation.hpp  binary_relation_test.cpp  bootstrap.py  carrier.cpp  carrier_test.cpp  compact.cpp  compact.hpp  copy_main.cpp  injective_function.cpp  message.hpp  message_test.cpp  messages.proto  nullary_function.hpp  nullary_function_test.cpp  parser.cpp  parser.hpp  program.cpp  program.hpp  program_fwd.hpp  protobuf.hpp  protobuf_test.cpp  sampler.hpp  sampler_impl.hpp  scheduler.cpp  signature.hpp  structure.hpp  structure.proto  (+10 more)
src/cartographer/: CMakeLists.txt  __init__.py  aggregate.cpp  aggregate.hpp  aggregate_main.cpp  binary_function.hpp  binary_relation.hpp  carrier.hpp  client.py  copy_main.cpp  (+38 more)
(+925 files in other folders)
