[build-system]
requires = ["setuptools>=45", "wheel", "parsable"]
build-backend = "setuptools.build_meta"

[project]
name = "pomagma"
description = "An inference engine for extensional lambda-calculus"
authors = [{name = "Fritz Obermeyer", email = "fritz.obermeyer@gmail.com"}]
maintainers = [{name = "Fritz Obermeyer", email = "fritz.obermeyer@gmail.com"}]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version", "scripts"]
dependencies = [
    "boto3",
    "hypothesis",
    "immutables",
    "isort",
    "nbval",
    "notebook",
    "numpy",
    "parsable",
    "protobuf>=5,<6",
    "psutil",
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
    "pyzmq",
    "ruff",
    "torch",
    "ty",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/fritzo/pomagma"
Repository = "https://github.com/fritzo/pomagma"

[tool.setuptools]
packages = {find = {exclude = ["src*"]}}

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.ruff]
# Configure line length and formatting settings
line-length = 88

# Target Python 3.11+ to match project requirements
target-version = "py311"

[tool.ruff.lint]
# Enable additional rules as needed
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
]

# Ignore E741 (ambiguous variable name) since we use mathematical notation
# where single letters like I, K, F, etc. are conventional combinators
ignore = ["E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pomagma"]
known-third-party = ["torch"]

[tool.ty.rules]
# TODO: Incrementally fix these errors and remove ignores
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unresolved-reference = "ignore"
possibly-unbound-attribute = "ignore"
call-non-callable = "ignore"  # pytest.skip(), pytest.xfail() calls 
no-matching-overload = "ignore"